# nrdk

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  README.md  benchmark.py  dataloader.py  dataset_schema.yaml  demo.py  evaluate.py  example.py  mkdocs.yml  mypy.ini  pyproject.toml  render.py  report.py  requirements.txt  rover  stats.py  summarize.py  train.py  unet.py  update_gh_pages.sh  video.py
.github/workflows/: ci.yml  docs.yml
analysis/: __init__.py  compared.py  plot.py  result.py  results.py  stats.py
config/: README.md  _lidar-map.yaml  _radar-fft-full.yaml  _traces.yaml  _traces2.yaml  aug-full.yaml  aug-lite.yaml  augment-lite.yaml  augment.yaml  dataset.yaml  eval.yaml  radarhd-doppler-nw.yaml  radarhd-doppler.yaml  radarhd-weighted.yaml  radarhd.yaml  radartransformer.yaml  radartransformer2.yaml  radarxformer-aug.yaml  radarxformer-nw.yaml  radarxformer-small.yaml  radarxformer.yaml  rxf-3d.yaml  rxf-large.yaml  rxf-medium.yaml  rxf-xlarge.yaml  rxf.yaml  rxf2.yaml  test.yaml  unext.yaml  unweighted.yaml
config/aug/: full.yaml  lite.yaml  none.yaml
config/baselines/: radarhd.yaml  radarhd3d.yaml  t_fftradnet.yaml
config/data/: bike.yaml  coloradar.yaml  data.yaml  indoor.yaml  outdoor.yaml  precomp.yaml  precompa.yaml  test.yaml
config/eval/: bike.yaml  coloradar.yaml  eval.yaml  indoor.yaml  outdoor.yaml  winter.yaml
config/grt/: 5d.yaml  large.yaml  medium.yaml  pico.yaml  precompa.yaml
config/history/: 2x4.yaml  4x1.yaml  4x2.yaml  4x4.yaml  t2p2.yaml  t4p1.yaml  t4p2.yaml
config/objectives/: bev.yaml  depth.yaml  map.yaml  segment.yaml  vel.yaml
config/patch/: dae.yaml  rae.yaml  rd.yaml  rd2x.yaml  rd4x.yaml  rdae.yaml
config/repr/: amplitude.yaml  aoa.yaml  cfar.yaml  fourier.yaml  pad.yaml  rawdoppler.yaml  shuffle.yaml
config/rxf/: bev.yaml  depth.yaml  large.yaml  map.yaml  medium.yaml  rxf.yaml  segment.yaml  small.yaml  vel.yaml  xsmall.yaml
config/sensors/: lidar2d.yaml  lidar3d.yaml  radar.yaml  semseg.yaml  vel.yaml
config/splits/: debug.yaml  p1.yaml  p10.yaml  p2.yaml  p5.yaml  partial20.yaml  partial50.yaml
config/swin/: bev.yaml  swin.yaml
config/traces/: bike.yaml  indoor.yaml  outdoor.yaml
config/unet/: unet.yaml
config/unext/: unext.yaml
deepradar/: __init__.py  augmentations.py  channels.py  config.py  dataloader.py  deepradar.py  metrics.py  modules.py  objective.py  objectives.py  optimizer.py  transforms.py  utils.py
deepradar/modules/: __init__.py  conv.py  dpt.py  patch.py  position.py  swin.py  transformer.py
deepradar/objectives/: __init__.py  _base.py  autoencoder.py  base.py  depth.py  occupancy.py  occupancy3.py  odom.py  odometry.py  radarhd.py  radarhd3d.py  semantics.py
deepradar/transforms/: __init__.py  base.py  camera.py  coloradar.py  fft.py  lidar.py  pose.py  radar.py
demo/: config.yaml  pipeline.py
docs/: augmentations.rst  cli.md  conf.py  config.md  deepradar.rst  design.md  index.md  index.rst  metrics.rst  objectives.md  objectives.rst  transforms.rst  usage.rst  vis.md
docs/deepradar/: channels.rst  config.rst  dataloader.rst  index.rst  modules.rst  optimizer.rst  training.rst  (+2 more)
format/: pyproject.toml
grt/: config.py  dataloader.py  evaluate.py  models.py  pyproject.toml  singleton.py  train.py  train_minimal.py
grt/config/: default.yaml  main.yaml
grt/config/aug/: full.yaml  lite.yaml  none.yaml
grt/config/base/: occ3d_to_occ2d.yaml  occ3d_to_semseg.yaml  occ3d_to_vel.yaml
grt/config/decoder/: lidar2d.yaml  lidar3d.yaml  vel.yaml
grt/config/decoders/: lidar2d.yaml  lidar3d.yaml  semseg.yaml  vel.yaml
grt/config/encoder/: grt.yaml
grt/config/model/: default.yaml
grt/config/model/decoder/: lidar2d.yaml  lidar3d.yaml  semseg.yaml  vel.yaml
grt/config/model/encoder/: grt.yaml
grt/config/model/tokenizer/: grt.yaml
grt/config/objective/: lidar2d.yaml  lidar3d.yaml  semseg.yaml  vel.yaml
grt/config/objectives/: lidar2d.yaml  lidar3d.yaml  semseg.yaml  vel.yaml
grt/config/optimizer/: default.yaml
grt/config/sensors/: lidar.yaml  lidar2d.yaml  lidar3d.yaml  pose.yaml  radar.yaml  radar_temporal_ae.yaml  semseg.yaml  vel.yaml
grt/config/size/: large.yaml  medium.yaml  pico.yaml  small.yaml  tiny.yaml
grt/config/tokenizer/: grt.yaml
grt/config/traces/: bike.yaml  indoor.yaml  outdoor.yaml
grt/config/trainer/: debug.yaml  default.yaml  profile.yaml
grt/config/training/: default.yaml
grt/config/transforms/: lidar2d.yaml  lidar3d.yaml  radar.yaml  radar_from_rd.yaml  semseg.yaml  vel.yaml
grt/grt/: __init__.py  models.py
grt/metrics/: __init__.py  classification.py  pointcloud.py
grt/modules/: __init__.py  dpt.py  patch.py  position.py  transformer.py  window.py
grt/objectives/: __init__.py  occupancy.py  odometry.py  semseg.py
grt/transforms/: __init__.py  lidar.py  transforms.py
grt/vis/: __init__.py  utils.py  voxels.py
models/: __init__.py  axial.py  decoders.py  grt.py  grtf.py  radartransformer.py  raddet.py  rxf.py  swin.py  t_fftradnet.py  unet.py  unext.py
notebooks/: info.ipynb  stats.ipynb
radar/: __init__.py  dataloader.py  modules.py  objectives.py  transforms.py
reports/: augmentations.csv  balance.csv  bev.csv  history.csv  input.csv  patch.csv  patchsize.csv  scale.csv  seg.csv  separate.csv  vel.csv
schema/: aliases.yaml  base.yaml  bev.yaml  colors.yaml  eval.yaml  exclusions.yaml  history.yaml  report.yaml  seg.yaml  vel.yaml
tests/: __init__.py  test_basic.py  test_metrics.py  test_objectives.py  test_roverd_lidar.py  test_tests.py  test_vis.py
torchradar/: __init__.py  dataloader.py  modules.py  transforms.py
(+105 files in other folders)
