[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrdk"
version = "0.0.0"
authors = [
  { name="Tianshu Huang", email="tianshu2@andrew.cmu.edu" },
]
description = "NRDK: Neural Radar Development Kit"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "abstract-dataloader == 0.3.4",
    "torch >= 2.4",
    "numpy >= 1.19",
    "beartype >= 0.20",
    "jaxtyping >= 0.3.2",
    "lightning == 2.3.3",
    "matplotlib >= 3.0.0",
    "torchvision",
    "einops >= 0.8.0",
    "optree >= 0.13",
]

[tool.uv.sources]
xwr = { git = "ssh://git@github.com/radarml/xwr.git" }
roverd = { git = "ssh://git@github.com/radarml/red-rover.git", subdirectory = "format"}

[project.optional-dependencies]
roverd = [
    "xwr == 0.3.1",
    "roverd[ouster,video] == 0.2.0"
]
grt = [
    "hydra-core >= 1.3.0",
    "ipykernel",
    "tyro >= 0.8.0",
]

docs = [
    # Most recent as of 16.04.2025; exact versions shouldn't matter unless the
    # API is changed, so we pin here just in case.
    "mkdocs == 1.6.*",
    "mkdocs-material == 9.6.*",
    "mkdocstrings-python-xref == 1.16.3",
    "mkdocstrings-python == 1.16.6",
    "mkdocstrings == 0.29.*",
    "ruff >= 0.10.0"
]
dev = [
    "pre-commit >= 4.0.0",
    "coverage",
    "pytest",
    "pytest-cov",
    "pyright >= 1.0.0",
    "ruff >= 0.10.0"
]

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
select = [
    "W", "N", "I", "D", "NPY"
]
ignore = [
    "D102",  # Inheriting docstrings is allowed
    "D107",  # Initializer goes in the class docstring
    "D401",  # "Imperative mood" NLP doesn't always make sense
    "D413",  # No blank lines after section is preferred by mkdocstrings

    # Must pick one...
    "D213",  # Pick 'multi-line-summary-first-line'.
    "D203",  # Pick `no-blank-line-before-class`.
]

[tool.coverage.report]
exclude_also = [
    '\.\.\.',
    'def __repr__',
    'if __name__ == .__main__.:',
    'class .*\bProtocol\):',
    'raise NotImplementedError',
]
